# FDE-challenge

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml
.githooks/: pre-commit
.github/: pull_request_template.md
backend/: .dockerignore  Dockerfile  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 5d6194941b1d_analytics_indexes.py  9cc15ee639a7_drop_users_table.py  c7239d1fc057_baseline_schema.py
backend/scripts/: clamp_existing_premiums.py  entrypoint.sh  seed_calls.py
backend/src/: main.py  settings.py
backend/src/app/: bootstrap.py
backend/src/app/built_in/auth/: __init__.py  dependencies.py  jwt.py  router.py
backend/src/app/built_in/health/: router.py
backend/src/app/features/agents/: models.py  router.py  schemas.py  service.py
backend/src/app/features/analytics/: __init__.py  cache.py  carriers.py  lanes.py  negotiation.py  router.py  schemas.py  service.py
backend/src/app/features/compliance/: __init__.py  router.py  schemas.py  service.py
backend/src/app/features/dashboard_calls/: router.py  schemas.py  service.py  tool_audit.py
backend/src/app/features/dashboard_loads/: __init__.py  router.py  schemas.py  service.py
backend/src/app/features/exports/: __init__.py  xlsx.py
backend/src/app/features/inbound_carrier_sales/: db.py  fmcsa_client.py  models.py  router.py  schemas.py  service.py
backend/src/app/features/inbound_carrier_sales/seeds/: loads.json
backend/src/app/features/users/: models.py  router.py  schemas.py  service.py
dashboard/: .dockerignore  Dockerfile  package.json  (+3 more)
(+108 files in other folders)
