[project]
name = "carrier-sales-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.5",
]
